(subdir
 run
 (dynamic_include ../generate/dune.inc))

(subdir
 generate
 (rule
  (deps
   (source_tree ../content)
   (source_tree ../orig)
   (source_tree ../../src/libs))
  (action
   (with-stdout-to
    dune.inc
    (run ../gen_dune.exe)))))

(executable
 (name gen_dune)
 (preprocess
  (pps ppx_string))
 (libraries re liquidsoap_build_tools)
 (modules gen_dune))

(rule
 (alias dummytest)
 (package liquidsoap)
 (action
  (run %{bin:liquidsoap} --version)))

(executable
 (name subst_md)
 (libraries re liquidsoap_lang)
 (modules subst_md))

(rule
 (alias doc)
 (target liquidsoap.1)
 (deps
  no-pandoc
  (:liquidsoap_man liquidsoap.1.md))
 (action
  (ignore-outputs
   (system
    "pandoc -s -t man %{liquidsoap_man} -o liquidsoap.1 || cp no-pandoc liquidsoap.1"))))

(install
 (section man)
 (package liquidsoap)
 (files liquidsoap.1))
