(rule
 (target liquidsoap-completion.el)
 (deps ../src/bin/liquidsoap.exe ./liquidsoap-completion.el.in)
 (action
  (with-stdout-to
   %{target}
   (progn
    (run ../src/bin/liquidsoap.exe --list-emacs-completions)
    (cat ./liquidsoap-completion.el.in)))))

(install
 (section share_root)
 (package liquidsoap)
 (files
  (bash-completion as bash_completion/completions/liquidsoap)))

(install
 (section share_root)
 (package liquidsoap-mode)
 (files
  (liquidsoap-mode.el as emacs/site-lisp/liquidsoap-mode.el)
  (liquidsoap-completion.el as emacs/site-lisp/liquidsoap-completion.el)))
