(executable
 (name gen_dune)
 (libraries liquidsoap_build_tools)
 (modules gen_dune))

(executable
 (name check_output)
 (modules check_output)
 (libraries unix pcre liquidsoap-lang))

(executable
 (name run_test)
 (modules run_test)
 (libraries liquidsoap-lang.console unix threads))

(rule
 (alias fmt)
 (deps
  test.liq
  (source_tree ../src/tooling/prettier)
  ../src/tooling/prettier/prettier-plugin-liquidsoap/dist/liquidsoap.js
  ../src/tooling/prettier/node_modules)
 (action
  (progn
   (with-stdout-to
    test.liq.prettier
    (chdir
     ../src/tooling/prettier
     (run pnpm prettier --config ./config.json ../../../tests/test.liq)))
   (diff test.liq test.liq.prettier))))
