opam-version: "2.0"
version: "1.1.1"
synopsis: "Bindings for the ffmpeg libraries"
maintainer: ["Romain Beauxis <toots@rastageeks.org>"]
authors: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
license: "LGPL"
homepage: "https://github.com/savonet/ocaml-ffmpeg"
bug-reports: "https://github.com/savonet/ocaml-ffmpeg/issues"
depends: [
  "ocaml-windows" {>= "4.05.0"}
  "dune" {>= "2.0"}
  "ffmpeg-avutil-windows" {= version}
  "ffmpeg-avcodec-windows" {= version}
  "ffmpeg-avfilter-windows" {= version}
  "ffmpeg-avdevice-windows" {= version}
  "ffmpeg-swscale-windows" {= version}
  "ffmpeg-swresample-windows" {= version}
]
build: [
  [
    "dune"
    "build"
    "-p"
    "ffmpeg"
    "-j"
    jobs
    "-x"
    "windows"
    "@install"
  ]
]
dev-repo: "git+https://github.com/savonet/ocaml-ffmpeg.git"
url {
  src: "https://github.com/savonet/ocaml-ffmpeg/archive/master.tar.gz"
}
