opam-version: "2.0"
version: "2.5.0"
synopsis: "Swiss-army knife for multimedia streaming"
description: """
Liquidsoap is a powerful and flexible language for describing your
streams. It offers a rich collection of operators that you can combine
at will, giving you more power than you need for creating or
transforming streams. But liquidsoap is still very light and easy to
use, in the Unix tradition of simple strong components working
together.
"""
maintainer: ["The Savonet Team <contact@liquidsoap.info>"]
authors: ["The Savonet Team <contact@liquidsoap.info>"]
license: "GPL-2.0-or-later"
homepage: "https://github.com/savonet/liquidsoap"
bug-reports: "https://github.com/savonet/liquidsoap/issues"
depends: [
  "dune" {>= "3.23"}
  "ocaml-windows" {>= "4.14"}
  "re" {>= "1.11.0" & < "1.14.0"}
  "re-windows" {>= "1.11.0" & < "1.14.0"}
  "curl-windows"
  "camomile" {>= "2.0.0"}
  "camomile-windows" {>= "2.0.0"}
  "uri"
  "uri-windows"
  "domain_shims"
  "domain_shims-windows"
  "magic-mime"
  "magic-mime-windows"
  "menhir" {>= "20240715"}
  "menhirLib-windows" {>= "20240715"}
  "dune-site-windows"
  "dune-build-info-windows"
  "ppx_string" {build}
  "ppx_string-windows" {build}
  "ppx_hash" {build}
  "ppx_hash-windows" {build}
  "sedlex" {>= "3.2"}
  "sedlex-windows" {>= "3.2"}
  "fileutils"
  "fileutils-windows"
  "xml-light"
  "xml-light-windows"
  "xmlm"
  "xmlm-windows"
  "winsvc-windows"
  "prometheus-app-windows"
  "cohttp-lwt-unix-windows"
  "posix-socket-windows"
  "ctypes-foreign-windows"
  "ssl-windows"
]
build: [
  [ "env"
    "LIQUIDSOAP_BUILD_TARGET=standalone"
    "LIQUIDSOAP_SYS_CONFIG=mingw"
    "LIQUIDSOAP_ENABLE_BUILD_CONFIG=false"
    "LIQUIDSOAP_INSTALL_NO_OPTIONAL_FAIL=true"
    "LIQUIDSOAP_LDFLAGS=-lcurl -lwldap32 -ldl -lnghttp2 -lpsl -lssh2 -lidn2 -lzstd -lunistring -lbrotlicommon -lbrotlidec -lcrypt32 -liconv -lpthread -lz -lbcrypt -lwinmm -lksuser -link /usr/src/mxe/usr/x86_64-w64-mingw32.static/lib/libavutil.a"
    "PKG_CONFIG_PATH_default_windows=/usr/src/mxe/usr/x86_64-w64-mingw32.static/lib/pkgconfig"
    "dune"
    "build"
    "-x"
    "windows"
    "@install"
    "--release"
    "-j"
    jobs
  ]
]
post-messages: [
  """\
We're sorry that your liquidsoap install failed. Check out our installation
instructions at: https://www.liquidsoap.info/doc-%{version}%/install.html#opam
for more information."""
    {failure}
  "✨ Congratulations on installing liquidsoap! ✨" {success}
  """\
We noticed that you did not install the ffmpeg package. This package is
highly recommended for most users and provides a lot of useful features,
including decoding and encoding multiple media format, sending and
receiving from various inputs and outputs and more."""
    {success & !ffmpeg-enabled}
  """\
We noticed that you did not install any ssl or tls support. Liquidsoap won't
be able to use SSL encryption in its input or output operators. You might want
to install one of ssl or tls-liquidsoap package."""
    {success & !ssl-enabled & !tls-enabled}
]
dev-repo: "git+https://github.com/savonet/liquidsoap.git"
