opam-version: "2.0"
verison: "0.8.0"
synopsis:
  "The mm library contains high-level to create and manipulate multimedia streams (audio, video, MIDI)"
maintainer: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
authors: ["Romain Beauxis <toots@rastageeks.org>"]
license: "GPL-2.0"
homepage: "https://github.com/savonet/ocaml-mm"
bug-reports: "https://github.com/savonet/ocaml-mm/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml-windows"
  "dune-configurator"
]
depopts: ["alsa" "ao" "mad" "pulseaudio" "ocamlsdl" "theora"]
conflicts: [
  "mad-windows" {< "0.5.0"}
  "alsa-windows" {< "0.3.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    "mm"
    "-j"
    jobs
    "-x"
    "windows"
    "@install"
  ]
]
dev-repo: "git+https://github.com/savonet/ocaml-mm.git"
depexts: [
  ["linux-headers"] {os-family = "alpine"}
]
url {
  src: "https://github.com/savonet/ocaml-mm/archive/main.tar.gz"
}
