opam-version: "2.0"
version: "0.2.0"
synopsis: "Binding for the Secure, Reliable, Transport protocol library"
description: """
Secure Reliable Transport (SRT) is an open source transport technology
that optimizes streaming performance across unpredictable networks, such
as the Internet.
This package provides OCaml bindings to the C implementation library.
"""
maintainer: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
authors: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
license: "GPL-2.0"
homepage: "https://github.com/savonet/ocaml-srt"
bug-reports: "https://github.com/savonet/ocaml-srt/issues"
depends: [
  "dune" {> "2.0"}
  "dune-configurator"
  "ctypes-windows"
  "posix-socket-windows"
  "posix-socket"
]
build: [
  [
    "dune"
    "build"
    "-p"
    "srt"
    "-j"
    jobs
    "-x"
    "windows"
    "@install"
  ]
]
depexts: [
  ["libsrt"] {os-distribution = "mxe"}
]
dev-repo: "git+https://github.com/savonet/ocaml-srt.git"
url {
  src: "https://github.com/savonet/ocaml-srt/archive/master.tar.gz"
}
